--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -1,23 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Historial de Busqueda: </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item" *ngFor="let item of resultados">
-            <a class="nav-link active" aria-current="page" (click)="busqueda(item)" >{{item}} </a>
-          </li>
-          <button type="button" class="btn btn-danger" (click)="delete()">Danger</button>
-          <app-input (enviar)="busqueda($event)"></app-input>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" >
+  <div class="container">
+    <a class="navbar-brand">Historial Resultados </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul
+        class="navbar-nav ms-auto mb-2 mb-lg-0"
+        *ngFor="let item of resultados"
+      >
+        <a class="nav-link active" aria-current="page" (click)="busqueda(item)"
+          >{{ item }}
+        </a>
+      </ul>
+      <div *ngIf="resultados.length >=1">
+        <button type="button" class="btn btn-danger" (click)="delete()">
+          eliminar Historial
+        </button>
 
-      
-        
-        </ul>
-        <form class="d-flex">
-         
-        </form>
       </div>
+    
+      <app-input (enviar)="busqueda($event)"></app-input>
     </div>
-  </nav>
+  </div>
+</nav>
